--- a/res/layout/infoselector.xml
+++ b/res/layout/infoselector.xml
@@ -147,7 +147,7 @@
         android:layout_height="50dp"
         android:gravity="bottom" >
 
-        <com.google.ads.AdView
+        <com.google.android.gms.ads.AdView
             android:id="@+id/admob"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -156,7 +156,7 @@
             ads:adUnitId="a1518e9f6df3dd2"
             ads:loadAdOnCreate="true"
             android:gravity="bottom" >
-        </com.google.ads.AdView>
+        </com.google.android.gms.ads.AdView>
 
         <ListView
             android:id="@+id/lv_agent"
