--- a/res/layout/new_mainactivity.xml
+++ b/res/layout/new_mainactivity.xml
@@ -27,6 +27,7 @@
 		    android:verticalSpacing="12dp"
 		    android:horizontalSpacing="12dp"
 		    android:numColumns="2"
+		    android:weightSum="2"
 		/>
 
     </RelativeLayout>
